--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -368,6 +368,22 @@ Div.separator
 .r_column ul
   padding: 0px 0px 0px 28px
 
+.profilebookimage
+  padding: 10px
+  width: 220px
+  background-color: #fcf6df
+  align: center
+  img
+    border-top: 4px solid #ffcc00
+  a
+    text-decoration: none
+    margin: 10px 0px
+    padding: 5px
+    width: 100px
+    display: block
+    text-align: center
+    font-weight: bold
+    font-size: 13px
 .bookimage
   padding: 10px
   width: 220px
@@ -384,6 +400,23 @@ Div.separator
     background-color: #669999
     color: white
     text-align: center
+
+.addbookdetails
+  font-family: Arial
+  font-size: 12px
+  padding: 5px
+  background-color: #fcf6df
+  align: center
+  text-decoration: none
+  margin: 10px 0px
+  display: block
+  background-color: #669999
+  color: white
+  text-align: center
+.addbooklist
+  margin: 5px
+  display: block
+  margin-left: 10px  
 //****************************
 //* footer*
 
@@ -817,6 +850,10 @@ span.highlight
     &:hover
       background: #FC0
       cursor: pointer
+  textarea
+    width: 200px
+    border: 1px solid #f5d852
+    padding: 4px
 
 fieldset
   border: 0
@@ -882,4 +919,16 @@ form fieldset#errors ul
   -ms-border-radius: 5px
   -khtml-border-radius: 5px
   border-radius: 5px
+  
+/*profile page-history tab*/
+.visitedtime
+  font-size: 10px
+  color: orange
 
+.inline
+  display: inline
+.largefont
+  display: inline
+  font-size: 24px
+  color: orange
+  font-weight: bold
