--- a/app/views/books/_listresult.html.haml
+++ b/app/views/books/_listresult.html.haml
@@ -15,7 +15,9 @@
     {:controller => :books, :action => :show, :id => @vol[:job_id], :tab => :read}
     = link_to image_tag("/images_#{I18n.locale}/learn.png", :alt => "#{I18n.t(:details_icon)}", :title => "#{I18n.t(:details_icon)}") , 
     {:controller => :books, :action => :show, :id => @vol[:job_id]}
-
+    - if logged_in?
+      - @place = "list"
+      = render :partial => "books/add_book"
   %h4
     - # TODO: Add highlights
     = link_to @title.html_safe , 
