--- a/app/views/books/_read.html.haml
+++ b/app/views/books/_read.html.haml
@@ -1,2 +1,5 @@
 %iframe{:frameborder => "0", :height => "525", :scrolling => "no", :style => "border:0px", :width => "980",
   :src => "http://localhost:8090/BookViewer/?locale=en&MyBasket=Disabled&LocaleButtons=disabled&book_id=DAF-Job:#{params[:id]}"}
+- @place = "details"
+- @number = 0
+= render :partial => "books/add_book"
