--- a/app/views/books/_bookauthors.html.haml
+++ b/app/views/books/_bookauthors.html.haml
@@ -5,4 +5,4 @@ By
   &bull;
   = author.kind_of?(Array) ? author[0].html_safe : author.html_safe
 - if (more > 0)
-  = "and #{more} more"
+  = I18n.t(:and_count_more, :count => more)
