--- a/app/views/books/_numfound.html.haml
+++ b/app/views/books/_numfound.html.haml
@@ -7,5 +7,5 @@
     = link_to image_tag("/images_#{I18n.locale}/gallery.png", :alt => I18n.t(:gallery_view), 
         :title => I18n.t(:gallery_view), :width => 15, :height => 14) , 
     {:params => search_view(params, 'gallery')}
-- if (@query_array.any? and !(session[:user_id].nil?) and !(@query == "*:*"))
-  = link_to I18n.t(:save_query_button) , {:controller => :user_search_history, :action => :save_query, :query => @query, :user_id => session[:user_id]},:method => :post, :class => "search"
+- if (@query_array.any? and !(session[:user_id].nil?) and !(@query == "*:*") and (@is_saved == nil))
+  = link_to I18n.t(:save_query) , {:controller => :user_search_history, :action => :save_query, :query => parse_url_params(@url_params), :user_id => session[:user_id]}, :class => "search" 
