--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -8,3 +8,5 @@
   = render :partial => "users/annotations"
 - elsif @current == 'saved_queries'
   = render :partial => "users/saved_queries"
+  - elsif @current == 'collections'
+  = render :partial => "users/collections"
