--- a/app/views/queries/_query.html.haml
+++ b/app/views/queries/_query.html.haml
@@ -1,9 +1,9 @@
-%tr
-  %td{:min_width => "100px;"}
-    = query.string
-  %td{:min_width => "100px;"}
-    = query.created_at
-  %td{:min_width => "100px;"}
-    = link_to "show result" , parse_query(query.string)
-  %td{:min_width => "100px;"}
-    = link_to "delete" , {:controller => :user_search_history, :action => :delete_query, :id => query.id},:method => :delete
+.newscontent
+  .sidelinks
+    = link_to image_tag("/images_#{I18n.locale}/search.png", :alt => I18n.t(:show_result), :title => I18n.t(:show_result)) , "/books?#{query.string}"
+    = link_to image_tag("/images_#{I18n.locale}/close.png" , :alt => I18n.t(:delete_query), :title => I18n.t(:delete_query)), {:controller => :user_search_history, :action => :delete_query, :id => query.id},:method => :delete, :confirm => "You sure?"
+  %h4
+    = "#{parse_query(query.string)}".html_safe
+  %h6
+    = "#{I18n.t(:search_date)}: #{query.created_at}"
+.clear
