save query bugs and edit collections

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -930,3 +930,8 @@ form fieldset#errors ul
   font-size: 24px
   color: orange
   font-weight: bold
+  
+  label.required:after
+    content: " *"
+    color: red
+
