--- a/app/views/collections/edit.html.haml
+++ b/app/views/collections/edit.html.haml
@@ -1,23 +1,18 @@
-.clear
-.page
-  .page_border
-    %b
-      = I18n.t(:collection_title)
-    %br
-    = best_in_place_if @can_edit, @collection, :title, :type => :input
-    %br
-    %br
-    %b
-      = I18n.t(:collection_description)
-    %br
-    = best_in_place_if @can_edit, @collection, :description, :type => :input
-    %br
-    %br
-    %b
-      = I18n.t(:status)
-    %br
-    = best_in_place_if @can_edit, @collection, :status, :type => :input
-    %br
-    %br
-    - if session["user_id"] == @collection.user_id
-      = link_to I18n.t(:submit_buton), :controller => :collections ,:action => :update_collection, :id => @collection
+.form
+  = form_for @collection, :builder => FormHelper::BHLFormBuilder do |f|
+    = validation_errors_for(@collection)
+    %ul
+      %li
+        = f.label :title, raw(t('title')), :class => 'required'
+      %li
+        = f.text_field :title, { :maxlength => 32 }
+      %li
+        = f.label :description, raw(t('description'))
+      %li
+        = f.text_area :description
+      %li
+        = f.check_box :status
+        = I18n.t(:public)
+    %fieldset
+      = f.submit I18n.t('submit_buton'), :class => "btn"
+      = f.submit I18n.t('clear_button'), :class => "btn", :type => "reset"
