--- a/app/views/books/show.html.haml
+++ b/app/views/books/show.html.haml
@@ -1,3 +1,10 @@
+- content_for :head do
+  = stylesheet_link_tag 'jquery/themes/jquery.ui.all.css'
+  = javascript_include_tag 'jquery/jquery-1.9.1.js'
+  = javascript_include_tag 'jquery/jquery.ui.core.js'
+  = javascript_include_tag 'jquery/jquery.ui.widget.js'
+  = javascript_include_tag 'jquery/jquery.ui.position.js'
+  = javascript_include_tag 'jquery/jquery.ui.menu.js'
 - if @current == 'read'
   = render :partial => "books/read"
 - else
