--- a/app/views/queries/_query.html.haml
+++ b/app/views/queries/_query.html.haml
@@ -10,6 +10,6 @@
     = link_to image_tag("/images_#{I18n.locale}/close.png" , :alt => I18n.t(:delete_query), :title => I18n.t(:delete_query)), {:controller => :user_search_history, :action => :delete_query, :id => query.id}, 
     :onclick => "return confirmDelete(#{query.id})"
   = "#{parse_query(query.string)}".html_safe
-  = "<b>#{I18n.t(:results)}</b>: #{query.number_of_returned_books}<br />".html_safe
+  = "<b>#{I18n.t(:results)}</b>: #{get_number_of_returned_books(query.string)}<br />".html_safe
   = "<b>#{I18n.t(:search_date)}</b>: #{query.created_at}".html_safe
 .clear
