--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -938,4 +938,15 @@ form fieldset#errors ul
   label.required:after
     content: " *"
     color: red
+    
+.dialogbutton
+  margin: 0px 5px
+  background: #699
+  padding: 4px
+  color: white
+  border: 0
+  width: 120px
+  &:hover
+    background: #FC0
+    cursor: pointer
 
