--- a/app/views/users/_listresult.html.haml
+++ b/app/views/users/_listresult.html.haml
@@ -1,3 +1,8 @@
+:javascript  
+  function confirmDelete(){
+    var r = confirm("#{I18n.t(:remove_book_from_history_confirm)}");
+    return r;
+  }
 .clear
 .thumb
   = link_to image_tag("/#{@thumb}", :width => 109, :border => 0) , 
@@ -10,7 +15,8 @@
         {:controller => :books, :action => :show, :id => @vol[:job_id], :tab => "brief"}
     = link_to image_tag("/images_#{I18n.locale}/trash_delete.png", :alt => "delete", :title => "delete") , 
         {:controller => :users, :action => :remove_book_history, :volume_id => @vol[:id],
-     :user_id => @ubh_vol[:user_id],:id => @ubh_vol[:user_id], :page => @page}
+         :user_id => @ubh_vol[:user_id],:id => @ubh_vol[:user_id], :page => @page},
+         :onclick => "return confirmDelete()"
   %h4
     = link_to @title.html_safe , 
         {:controller => :books, :action => :show, :id => @vol[:job_id], :tab => "brief"}
