--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -949,4 +949,35 @@ form fieldset#errors ul
   &:hover
     background: #FC0
     cursor: pointer
-
+.dialogclass.ui-dialog
+  button
+    margin: 0px 5px
+    background: #699
+    padding: 4px
+    color: white
+    border: 0
+    width: 120px
+    border-top-left-radius: 0
+    border-top-right-radius: 0
+    border-bottom-left-radius: 0
+    border-bottom-right-radius: 0
+    &:hover
+      background: #FC0
+      cursor: pointer
+  .small
+    margin: -10px 5px
+    background: #699
+    padding: 4px
+    color: white
+    border: 0
+    width: 21px
+    height: 21px
+    border-top-left-radius: 0
+    border-top-right-radius: 0
+    border-bottom-left-radius: 0
+    border-bottom-right-radius: 0
+    &:hover
+      background: #FC0
+      cursor: pointer
+.dialogtitle
+  background-color: #FFCC00
