--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -428,6 +428,7 @@ Div.separator
     font-size: 10px
     color: #999
 
+
 //*************Authors******************
 
 .authors
@@ -927,15 +928,47 @@ form fieldset#errors ul
   font-size: 10px
   color: orange
 
-.inline
-  display: inline
+
 .largefont
   display: inline
   font-size: 24px
   color: orange
   font-weight: bold
   
-  label.required:after
-    content: " *"
-    color: red
+
+.nav 
+  background: #ffffff
+  width: 100%
+  margin-top: -2em
+
+.nav ul 
+  list-style-type: none
+  width: 910px
+
+
+.nav li 
+  display: inline
+  float: left
+  width: 5%
+  margin-left: 5%
+  margin-right: 3%
+  margin-top: 1%
+  text-align: center
+
+.nav a 
+  display: block
+  width: 109px
+  margin-right: 0% auto
+  padding-left: 0% auto
+  color: #5E09CB
+  text-decoration: none
+  overflow: hidden
+  white-space: nowrap
+  text-overflow: ellipsis
+  
+.nav h4 
+  margin-left: 6%
+  margin-top: 3%
+  color: #ffcc00
+  margin-right: 10%
 
