--- a/app/views/users/_user_history.html.haml
+++ b/app/views/users/_user_history.html.haml
@@ -18,7 +18,8 @@
           - thumb = ''
           - if(@vol[:get_thumbnail_fail] == 0)
             - @thumb = "volumes/#{@vol[:job_id]}/thumb.jpg"
-
+          - else
+            - @thumb = "images_#{I18n.locale}/noThumb.png"
         - if(@view == 'gallery')
           = render :partial => "users/galleryresult"
         - else
