--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -1003,7 +1003,7 @@ form fieldset#errors ul
       cursor: pointer
   .small
     margin: -10px 5px
-    background: #699
+    background: #FC0
     padding: 4px
     color: white
     border: 0
@@ -1014,7 +1014,24 @@ form fieldset#errors ul
     border-bottom-left-radius: 0
     border-bottom-right-radius: 0
     &:hover
-      background: #FC0
+      
       cursor: pointer
 .dialogtitle
   background-color: #FFCC00
+  
+/*rating*/
+
+.starrating
+  background: url("/images_en/star.png") 0 0
+  width: 25px
+  height: 25px
+  display: inline
+  float: left
+.on
+  background-position: 0 25px
+.shine
+  background-position: 0 50px
+  
+.rating
+  width: 125px
+  height: 100px
