--- a/app/views/books/_tabs.html.haml
+++ b/app/views/books/_tabs.html.haml
@@ -3,9 +3,12 @@
     .bookimage{:align => "center"}
       =image_tag "/#{@thumb}"
       =link_to I18n.t(:read_book_link), "/books/#{params[:id]}/read"
-      - @place = "details"
-      - @number = 0
-      = render :partial => "books/add_book"
+      - if logged_in?
+        - @place = "details"
+        - @number = 0
+        = render :partial => "books/add_book"
+        .rating
+          = render :partial => "books/rating"
 .page
   .page_border
     .tabcontent
