--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -54,3 +54,5 @@
         = link_to I18n.t(:names_link), {:controller => :names, :action => :index}
         |
         = link_to I18n.t(:geographics_link), {:controller => :geographics, :action => :index, :range => ""}
+        |
+        = link_to I18n.t(:collections_link), {:controller => :collections, :action => :index}
