--- a/app/views/collections/_collection.html.haml
+++ b/app/views/collections/_collection.html.haml
@@ -3,6 +3,15 @@
   var r= confirm("#{I18n.t(:delete_collection_confirm)}");
     return r;
   }
+
+- if(collection.photo_name.nil?)
+  - @thumb = "images_#{I18n.locale}/defaultCollection.jpg"
+- else
+  - @thumb = "images_#{I18n.locale}/collections/#{collection.id}/#{collection.photo_name}"
+.thumb
+  = link_to image_tag("/#{@thumb}", :width => 109, :border => 0) , 
+    {:controller => :collections, :action => :show, :id => collection.id}
+
 .newscontent
   .sidelinks
     = link_to image_tag("/images_#{I18n.locale}/open.png", :alt => I18n.t(:open_collection), :title => I18n.t(:open_collection)) , 
