--- a/app/views/collections/edit.html.haml
+++ b/app/views/collections/edit.html.haml
@@ -13,6 +13,14 @@
       %li
         = f.check_box :status
         = I18n.t(:public)
+      %li
+        - if(@collection.photo_name.nil?)
+          - @thumb = "images_#{I18n.locale}/defaultCollection.jpg"
+        - else
+          - @thumb = "images_#{I18n.locale}/collections/#{@collection.id}/#{@collection.photo_name}"
+        = image_tag("/#{@thumb}", :width => 109, :border => 0)
+      %li
+        = f.file_field :picture
     %fieldset
       = f.submit I18n.t('submit_buton'), :class => "btn"
       = f.submit I18n.t('clear_button'), :class => "btn", :type => "reset"
