--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -19,5 +19,10 @@
     = parse_collection_status(@collection.status)
     %br
     %br
+    - if(@collection.photo_name.nil?)
+      - @thumb = "images_#{I18n.locale}/defaultCollection.jpg"
+    - else
+      - @thumb = "images_#{I18n.locale}/collections/#{@collection.id}/#{@collection.photo_name}"
+    = image_tag("/#{@thumb}", :width => 109, :border => 0)
     - if session["user_id"] == @collection.user_id
       = link_to I18n.t(:edit_collection), :controller => :collections ,:action => :edit, :id => @collection
