half star rating

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -1031,7 +1031,8 @@ form fieldset#errors ul
   background-position: 0 25px
 .shine
   background-position: 0 50px
-  
+.half
+  background-position: 0 50px
 .rating
   width: 125px
   height: 100px
