--- a/app/views/books/_rating.html.haml
+++ b/app/views/books/_rating.html.haml
@@ -4,17 +4,31 @@
   
 :javascript
   $(document).ready(function() {
-    // load stars
+    // load static (book general rate) stars
     if(#{@book_rate}){
-      // TODO add * 2 when display half star 
-      var count = #{@book_rate};
+      var totalRate = #{@book_rate};
+      var count = Math.floor(totalRate);
+      
+      var fractional = totalRate - count;
       for(i=1; i <= count; i++){
         $("#staticstar"+ i).addClass("on");
       }
+      if(fractional >= 0.3){
+        
+        count = count+1;
+        if(fractional <= 0.7){
+          //half
+          
+          $("#staticstar"+ count).addClass("half");
+        }else{
+          //all
+          $("#staticstar"+ count).addClass("on");
+        }
+      }
     }
-    
-    if(#{@user_rate} != 100){
-      // TODO add * 2 when display half star 
+    //load dynamic (user rate) stars
+    //when user rate == -1 this means that he never rated this book before
+    if(#{@user_rate} != -1){
       var count = #{@user_rate};
       for(i=1; i <= count; i++){
           $("#star"+ i).addClass("on");
@@ -40,8 +54,10 @@
     });
     
     $('li').click(function () {
+     // value == 0 then it is static star
       if(parseInt($(this).attr("value")) != 0){
         var count = parseInt($(this).attr("value"));
+        // if off then user want to reset his rating to 0
         var off = false;
         if(count == 1 && (($("#star1").attr("class")).split(' ')).length == 3 &&  ($("#star2").attr("class")).localeCompare("starrating") == 0){
           for(i=1; i <= 5; i++){
@@ -65,18 +81,38 @@
                 url: "/users/rate?rate=" + count + "&user_id=" + "#{session[:user_id]}" + "&job_id=" + "#{params[:id]}", 
                 dataType: "script",
                 success: function(data){
+                            // update static stars
                             if(data.charAt(1) == '0'){
-                             $("#staticstar1").removeClass("on");
+                              // rate = 0 no stars are on
+                              $("#staticstar1").removeClass("on");
+                              $("#staticstar1").removeClass("half");
                             }else{
+                              var totalRate = parseFloat(data.substring(1,4));
+                              var count = Math.floor(totalRate);
+                              var fractional = totalRate - count;
+                              
                               for(i=1; i <= 5; i++){
-                                if(i+".0".localeCompare(data) <= 0){
+                                if(i <= count){
+                                  $("#staticstar"+ i).removeClass("half");
                                   $("#staticstar"+ i).addClass("on");
-                                } else {
+                                }else{
                                   $("#staticstar"+ i).removeClass("on");
+                                  $("#staticstar"+ i).removeClass("half");
+                                }//end if
+                              }//end for
+                              
+                              if(fractional >= 0.3){
+                                count = count+1;
+                                if(fractional <= 0.7){
+                                  //half
+                                  $("#staticstar"+ count).addClass("half");
+                                }else{
+                                  //all
+                                  $("#staticstar"+ count).addClass("on");
                                 }
-                              }
-                            }
-                           }
+                              }//end if
+                            }//end if
+                          }
                });
           
         
