--- a/app/views/collections/edit.html.haml
+++ b/app/views/collections/edit.html.haml
@@ -1,5 +1,5 @@
 .form
-  = form_for @collection, :builder => FormHelper::BHLFormBuilder do |f|
+  = form_for @collection, :html => {:multipart => true}, :builder => FormHelper::BHLFormBuilder do |f|
     = validation_errors_for(@collection)
     %ul
       %li
@@ -14,13 +14,13 @@
         = f.check_box :status
         = I18n.t(:public)
       %li
-        - if(@collection.photo_name.nil?)
-          - @thumb = "images_#{I18n.locale}/defaultCollection.jpg"
-        - else
-          - @thumb = "images_#{I18n.locale}/collections/#{@collection.id}/#{@collection.photo_name}"
-        = image_tag("/#{@thumb}", :width => 109, :border => 0)
+        - if(!(@collection.photo_name.blank?))
+          - @thumb = @collection.photo_name_url(:thumb)
+          = image_tag("#{@thumb}", :width => 150, :border => 0 , :id => "collection_photo")
+          = check_box_tag "delete_photo"
+          = I18n.t(:delete_photo)
       %li
-        = f.file_field :picture
-    %fieldset
+        = f.file_field :photo_name
+        %fieldset
       = f.submit I18n.t('submit_buton'), :class => "btn"
       = f.submit I18n.t('clear_button'), :class => "btn", :type => "reset"
