--- a/app/views/books/_collections.html.haml
+++ b/app/views/books/_collections.html.haml
@@ -3,7 +3,8 @@
     - if (@collections != '' && @collections_total_number > 0)
       .count
         = "Found #{pluralize(@collections_total_number, I18n.t(:collection))} "
-      = render @collections
+      - @collections.each do |collection|
+        = render :partial => "collections/collection", :locals => {:with_rate => 0, :collection => collection}
       - if(!((@page == @lastPage && @lastPage == 1) || @lastPage == 0))
         - @pages = adjustPaging(@page, @lastPage)
         = render :partial => "books/paging"
