--- a/app/views/collections/_collection.html.haml
+++ b/app/views/collections/_collection.html.haml
@@ -25,10 +25,11 @@
     {:controller => :collections, :action => :list_books_in_collection, :id => collection.id}
   %h5
     = "#{I18n.t(:last_modified_date)}: #{collection.last_modified_date}"
-- if logged_in?
+- if logged_in? && with_rate == 1
   - if collection.rate.nil?
     - rate = 0.0
   - else
     - rate = collection.rate
   = render :partial => "collections/rating", :locals => {:collection_rate => rate, :user_rate => user_rate, :col_id => collection.id}
+  
 .clear
