--- a/app/views/users/_collections.html.haml
+++ b/app/views/users/_collections.html.haml
@@ -3,7 +3,8 @@
     - if (@user_collections != '' && @user_collections_total_number > 0)
       .count
         = "Found #{pluralize(@user_collections_total_number, I18n.t(:collection))} "
-      = render @user_collections
+      - @user_collections.each do |collection|
+        = render :partial => "collections/collection", :locals => {:with_rate => 2, :collection => collection}
       - if(!((@page == @lastPage && @lastPage == 1) || @lastPage == 0))
         - @pages = adjustPaging(@page, @lastPage)
         = render :partial => "books/paging"
