--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -31,6 +31,14 @@
           = f.label :recaptcha, raw(t('recaptcha')), :class => 'required'
         %li
           = recaptcha_tags(display: {theme: 'clean'})
+      %li
+        - if(!(@user.photo_name.blank?))
+          - @thumb = @user.photo_name_url(:thumb)
+          = image_tag("#{@thumb}", :width => 150, :border => 0 )
+          = check_box_tag "delete_photo"
+          = I18n.t(:delete_photo)
+      %li
+        = f.file_field :photo_name
     %fieldset
       = f.submit I18n.t('submit_buton'), :class => "btn"
       = f.submit I18n.t('clear_button'), :class => "btn", :type => "reset"
