--- a/app/views/comments/_index.html.haml
+++ b/app/views/comments/_index.html.haml
@@ -1,3 +1,4 @@
+= render :partial => "comments/new_comment"
 - @comments_replies_list.each do |comment|
   - if comment.comment_id #reply
     .reply
