--- a/app/views/comments/_new_comment.html.haml
+++ b/app/views/comments/_new_comment.html.haml
@@ -1,4 +1,10 @@
-%input#searchfield{:size => "100", :style => "color: rgb(153, 153, 153);", :type => "text"}
-= link_to image_tag("/images_#{I18n.locale}/close.png", :alt => I18n.t(:post), :title => I18n.t(:post)) , 
-    {:controller => :comments, :action => :create, :collection_id => nil, :volume_id => params[:id] , :text => "wa" }
-
+= form_for @comment, :builder => FormHelper::BHLFormBuilder do |f|
+  = validation_errors_for(@comment)
+  %ul
+    %li
+      = f.text_field :text ,  :size => 30
+      = f.hidden_field :volume_id, value: @volume_id
+      = f.hidden_field :collection_id, value: @collection_id
+      = f.hidden_field :user_id, value: session[:user_id]
+  %fieldset
+    = f.submit I18n.t('submit_buton'), :class => "btn"
