--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -27,3 +27,4 @@
     %br
     - if session["user_id"] == @collection.user_id
       = link_to I18n.t(:edit_collection), :controller => :collections ,:action => :edit, :id => @collection
+    = render :partial => "comments/index"
